--- a/src/app/components/list-posts/list-posts.component.html
+++ b/src/app/components/list-posts/list-posts.component.html
@@ -26,7 +26,7 @@
                     <td scope="row">{{ post.title }}</td>
                     <td>{{ post.body }}</td>
                     <td class="text-right" nowrap>
-                        <a href="" class="btn btn-sm mr-1"><i class="fa fa-eye"></i></a>
+                        <a routerLink="/list/{{post.id}}" class="btn btn-sm mr-1"><i class="fa fa-eye"></i></a>
                         <a href="" class="btn btn-sm"><i class="fa fa-trash"></i></a>
                     </td>
                 </tr>
