--- a/src/app/components/show-post/show-post.component.html
+++ b/src/app/components/show-post/show-post.component.html
@@ -1,1 +1,18 @@
-<p>show-post works!</p>
+<div class="row">
+    <div class="col-md-1"></div>
+    <div class="col-md-10">
+        <div class="row">
+            <div class="col-md-12">
+                 <h2>{{posts.title}}</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                 <p>{{posts.body}}</p>
+            </div>
+        </div>
+       
+    </div>
+    <div class="col-md-1"></div>
+    
+</div>
